--- a/examples/cloud-specific/gcp_example.yaml
+++ b/examples/cloud-specific/gcp_example.yaml
@@ -1,65 +1,53 @@
 ---
-# GCP-Specific Features Example
-# Demonstrates GCP-specific functionality and configuration
-
-guid: "gcp01"
-
+guid: gcp01
 yamlforge:
   cloud_workspace:
-    name: "gcp-specific-demo"
-    description: "GCP-specific features demonstration workspace"
-    tags:
-
+    name: gcp-specific-demo
+    description: GCP-specific features demonstration workspace
   instances:
-    # Standard GCP instances
-    - name: "gcp-web-server"
-      provider: "gcp"
-      size: "medium"
-      image: "RHEL9-latest"
-      region: "us-central1"
-      zone: "us-central1-a"
-      
-    - name: "gcp-app-server"
-      provider: "gcp"
-      size: "large"
-      image: "RHEL8-latest"
-      region: "us-west1"
-      zone: "us-west1-b"
-
-    # GCP with custom machine specs
-    - name: "gcp-custom-worker"
-      provider: "gcp"
-      cores: 4
-      memory: 8192
-      image: "RHEL9-latest"
-      region: "us-east1"
-      zone: "us-east1-c"
-
-    # GCP with preemptible instances (cost-optimized)
-    - name: "gcp-preemptible-worker"
-      provider: "gcp"
-      size: "small"
-      image: "Fedora-latest"
-      region: "us-central1"
-      zone: "us-central1-a"
-      preemptible: true
-
-  # GCP-specific security and networking
+  - name: gcp-web-server
+    provider: gcp
+    size: medium
+    image: RHEL9-latest
+    region: us-central1
+    zone: us-central1-a
+  - name: gcp-app-server
+    provider: gcp
+    size: large
+    image: RHEL8-latest
+    region: us-west1
+    zone: us-west1-b
+  - name: gcp-custom-worker
+    provider: gcp
+    cores: 4
+    memory: 8192
+    image: RHEL9-latest
+    region: us-east1
+    zone: us-east1-c
+  - name: gcp-preemptible-worker
+    provider: gcp
+    size: small
+    image: Fedora-latest
+    region: us-central1
+    zone: us-central1-a
+    preemptible: true
   security_groups:
     gcp-web-sg:
-      description: "GCP web server security group"
+      description: GCP web server security group
       rules:
-        - protocol: "tcp"
-          port: 80
-          source_ranges: ["0.0.0.0/0"]
-        - protocol: "tcp"
-          port: 443
-          source_ranges: ["0.0.0.0/0"]
-        - protocol: "tcp"
-          port: 22
-          source_ranges: ["10.0.0.0/8"]
-
+      - protocol: tcp
+        port: 80
+        source_ranges:
+        - 0.0.0.0/0
+      - protocol: tcp
+        port: 443
+        source_ranges:
+        - 0.0.0.0/0
+      - protocol: tcp
+        port: 22
+        source_ranges:
+        - 10.0.0.0/8
   tags:
-    cloud_provider: "gcp"
-    deployment_type: "multi_zone"
-    environment: "production" 
+    cloud_provider: gcp
+    deployment_type: multi_zone
+    environment: production
