--- a/examples/testing/cloud_workspace_example.yaml
+++ b/examples/testing/cloud_workspace_example.yaml
@@ -1,56 +1,36 @@
 ---
-# Cloud-Agnostic Workspace Example
-# Demonstrates unified workspace organization across all cloud providers
-
-guid: "cws01"
-
+guid: cws01
 yamlforge:
-  # Cloud-agnostic workspace organization
-  # Maps to each cloud's native resource grouping concept:
-  # - Azure: Resource Groups  
-  # - GCP: Projects (creates new projects dynamically)
-  # - IBM Cloud: Resource Groups
-  # - AWS: Organization tagging
   cloud_workspace:
-    name: "enterprise-web-platform"
-    description: "Production web platform with multi-cloud deployment"
+    name: enterprise-web-platform
+    description: Production web platform with multi-cloud deployment
     tags:
-      cost_center: "engineering"
-      environment: "production"
-      owner: "platform-team"
-      compliance: "sox"
-
+      cost_center: engineering
+      environment: production
+      owner: platform-team
+      compliance: sox
   instances:
-    # AWS instance - will use common_tags from workspace organization
-    - name: "aws-web-server"
-      provider: "aws"
-      size: "small"
-      image: "RHEL9-latest"
-      region: "us-east-1"
-      
-    # Azure instance - will use Azure Resource Group: "enterprise-web-platform"  
-    - name: "azure-web-server"
-      provider: "azure"
-      size: "small"
-      image: "RHEL9-latest"
-      region: "eastus"
-      
-    # GCP instance - maps to GCP Project organization
-    - name: "gcp-web-server"
-      provider: "gcp"
-      size: "small"
-      image: "RHEL9-latest"
-      region: "us-central1"
-      
-    # IBM Cloud instance - will use IBM Resource Group: "enterprise-web-platform"
-    - name: "ibm-web-server"
-      provider: "ibm"
-      size: "small"
-      image: "RHEL9-latest"
-      region: "us-south"
-
-  # Global tags applied to all instances
+  - name: aws-web-server
+    provider: aws
+    size: small
+    image: RHEL9-latest
+    region: us-east-1
+  - name: azure-web-server
+    provider: azure
+    size: small
+    image: RHEL9-latest
+    region: eastus
+  - name: gcp-web-server
+    provider: gcp
+    size: small
+    image: RHEL9-latest
+    region: us-central1
+  - name: ibm-web-server
+    provider: ibm_vpc
+    size: small
+    image: RHEL9-latest
+    region: us-south
   tags:
-    application: "web-platform"
-    tier: "production"
-    monitoring: "enabled" 
+    application: web-platform
+    tier: production
+    monitoring: enabled
