--- a/.gitignore
+++ b/.gitignore
@@ -50,4 +50,8 @@ Thumbs.db
 # Backup files
 *.backup
 *.bak
-*.orig 
+*.orig
+
+# Environment variables (contains sensitive credentials)
+envvars.sh
+*.env 
