--- a/examples/cost-conscious/cheapest_provider_example.yaml
+++ b/examples/cost-conscious/cheapest_provider_example.yaml
@@ -1,133 +1,113 @@
 ---
-# Cheapest Provider Example
-# Demonstrates the cost-optimization meta-provider that automatically selects
-# the cheapest cloud provider for each instance based on real hourly pricing
-
 yamlforge:
   cloud_workspace:
-    name: "cost-optimization-demo"
-    description: "Demonstration of automatic cost optimization across cloud providers"
-
-  # Security groups for web and database access
+    name: cost-optimization-demo
+    description: Demonstration of automatic cost optimization across cloud providers
   security_groups:
     web-tier:
-      description: "Web tier access"
+      description: Web tier access
       rules:
-        - protocol: tcp
-          port: 80
-          source: "0.0.0.0/0"
-        - protocol: tcp
-          port: 443
-          source: "0.0.0.0/0"
-        - protocol: tcp
-          port: 22
-          source: "10.0.0.0/8"
-
+      - protocol: tcp
+        port: 80
+        source: 0.0.0.0/0
+      - protocol: tcp
+        port: 443
+        source: 0.0.0.0/0
+      - protocol: tcp
+        port: 22
+        source: 10.0.0.0/8
     db-tier:
-      description: "Database tier access"
+      description: Database tier access
       rules:
-        - protocol: tcp
-          port: 3306
-          source: "10.0.0.0/16"
-        - protocol: tcp
-          port: 22
-          source: "10.0.0.0/8"
-
-  # SSH key configuration
-  ssh_keys:
-    default: "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC7... cost-optimizer@company.com"
-
-  # Instances using cheapest provider meta-provider
+      - protocol: tcp
+        port: 3306
+        source: 10.0.0.0/16
+      - protocol: tcp
+        port: 22
+        source: 10.0.0.0/8
   instances:
-    # Small development instances - automatically finds cheapest small instance
-    - name: "dev-web-1"
-      provider: "cheapest"
-      size: "small"
-      region: "us-east-1"
-      image: "RHEL9-latest"
-      security_groups: ["web-tier"]
-      tags:
-        environment: "development"
-        cost_optimized: "true"
-
-    - name: "dev-web-2"
-      provider: "cheapest"
-      size: "small"
-      region: "us-west-2"
-      image: "RHEL9-latest"
-      security_groups: ["web-tier"]
-      tags:
-        environment: "development"
-        cost_optimized: "true"
-
-    # Medium production instances - automatically finds cheapest medium instance
-    - name: "prod-app-1"
-      provider: "cheapest"
-      size: "medium"
-      region: "us-east-1"
-      image: "RHEL9-latest"
-      security_groups: ["web-tier"]
-      tags:
-        environment: "production"
-        cost_optimized: "true"
-
-    - name: "prod-app-2"
-      provider: "cheapest"
-      size: "medium"
-      region: "eu-west-1"
-      image: "RHEL9-latest"
-      security_groups: ["web-tier"]
-      tags:
-        environment: "production"
-        cost_optimized: "true"
-
-    # Large database instances - automatically finds cheapest large instance
-    - name: "prod-db-primary"
-      provider: "cheapest"
-      size: "large"
-      region: "us-east-1"
-      image: "RHEL9-latest"
-      security_groups: ["db-tier"]
-      tags:
-        environment: "production"
-        role: "database-primary"
-        cost_optimized: "true"
-
-    - name: "prod-db-replica"
-      provider: "cheapest"
-      size: "large"
-      region: "us-west-2"
-      image: "RHEL9-latest"
-      security_groups: ["db-tier"]
-      tags:
-        environment: "production"
-        role: "database-replica"
-        cost_optimized: "true"
-
-    # Extra large compute instances - automatically finds cheapest xlarge instance
-    - name: "analytics-worker-1"
-      provider: "cheapest"
-      size: "xlarge"
-      region: "us-east-1"
-      image: "RHEL9-latest"
-      tags:
-        environment: "production"
-        role: "analytics"
-        cost_optimized: "true"
-
-    - name: "analytics-worker-2"
-      provider: "cheapest"
-      size: "xlarge"
-      region: "eu-central-1"
-      image: "RHEL9-latest"
-      tags:
-        environment: "production"
-        role: "analytics"
-        cost_optimized: "true"
-
-  # Global tags applied to all instances
+  - name: dev-web-1
+    provider: cheapest
+    size: small
+    region: us-east-1
+    image: RHEL9-latest
+    security_groups:
+    - web-tier
+    tags:
+      environment: development
+      cost_optimized: 'true'
+  - name: dev-web-2
+    provider: cheapest
+    size: small
+    region: us-west-2
+    image: RHEL9-latest
+    security_groups:
+    - web-tier
+    tags:
+      environment: development
+      cost_optimized: 'true'
+  - name: prod-app-1
+    provider: cheapest
+    size: medium
+    region: us-east-1
+    image: RHEL9-latest
+    security_groups:
+    - web-tier
+    tags:
+      environment: production
+      cost_optimized: 'true'
+  - name: prod-app-2
+    provider: cheapest
+    size: medium
+    region: eu-west-1
+    image: RHEL9-latest
+    security_groups:
+    - web-tier
+    tags:
+      environment: production
+      cost_optimized: 'true'
+  - name: prod-db-primary
+    provider: cheapest
+    size: large
+    region: us-east-1
+    image: RHEL9-latest
+    security_groups:
+    - db-tier
+    tags:
+      environment: production
+      role: database-primary
+      cost_optimized: 'true'
+  - name: prod-db-replica
+    provider: cheapest
+    size: large
+    region: us-west-2
+    image: RHEL9-latest
+    security_groups:
+    - db-tier
+    tags:
+      environment: production
+      role: database-replica
+      cost_optimized: 'true'
+  - name: analytics-worker-1
+    provider: cheapest
+    size: xlarge
+    region: us-east-1
+    image: RHEL9-latest
+    tags:
+      environment: production
+      role: analytics
+      cost_optimized: 'true'
+  - name: analytics-worker-2
+    provider: cheapest
+    size: xlarge
+    region: eu-central-1
+    image: RHEL9-latest
+    tags:
+      environment: production
+      role: analytics
+      cost_optimized: 'true'
   tags:
-    project: "cost-optimization-demo"
-    managed_by: "yamlforge"
-    billing_team: "engineering"
-    cost_center: "infrastructure" 
+    project: cost-optimization-demo
+    managed_by: yamlforge
+    billing_team: engineering
+    cost_center: infrastructure
