--- a/examples/default_project_dns_test.yaml
+++ b/examples/default_project_dns_test.yaml
@@ -1,65 +1,38 @@
+---
 yamlforge:
   cloud_workspace:
-    name: "default-project-dns"
-    description: "Test DNS management using default project from credentials"
-
-  # DNS management enabled with root zone in same project as credentials
-  dns_config:
-    root_zone_management: true
-    root_zone:
-      domain: "mycompany.com"
-      zone_name: "mycompany-com-zone"
-      # project_id not specified - should default to credentials project_id
-      auto_create: false
-    delegation_ttl: 3600
-
-  # User management with company domain
-  user_management:
-    company_domain: "mycompany.com"
-    enable_domain_ownership: true
-
-  users:
-    # Company domain user - gets Owner due to domain match
-    - email: "admin@mycompany.com"
-      roles: ["roles/editor"]
-      display_name: "Company Admin"
-      
-    # External user - gets exact roles
-    - email: "external@partner.com"
-      roles: ["roles/viewer", "roles/compute.instanceAdmin"]
-      display_name: "External Partner"
-
+    name: default-project-dns
+    description: Test DNS management using default project from credentials
   instances:
-    - name: "web-app"
-      provider: "gcp"
-      size: "medium"
-      region: "us-east1"
-      image: "Ubuntu-22.04"
-      tags:
-        purpose: "web-application"
-        environment: "production"
-        
-    - name: "database"
-      provider: "gcp"
-      size: "large"
-      region: "us-east1"
-      image: "Ubuntu-22.04"
-      tags:
-        purpose: "database"
-        environment: "production"
-
+  - name: web-app
+    provider: gcp
+    size: medium
+    region: us-east1
+    image: Ubuntu-22.04
+    tags:
+      purpose: web-application
+      environment: production
+  - name: database
+    provider: gcp
+    size: large
+    region: us-east1
+    image: Ubuntu-22.04
+    tags:
+      purpose: database
+      environment: production
   security_groups:
-    - name: "web-tier"
-      description: "Web application security group"
-      rules:
-        - from_port: 80
-          to_port: 80
-          protocol: tcp
-          cidr_blocks: ["0.0.0.0/0"]
-          description: "HTTP access"
-          
-        - from_port: 443
-          to_port: 443
-          protocol: tcp
-          cidr_blocks: ["0.0.0.0/0"]
-          description: "HTTPS access" 
+  - name: web-tier
+    description: Web application security group
+    rules:
+    - from_port: 80
+      to_port: 80
+      protocol: tcp
+      cidr_blocks:
+      - 0.0.0.0/0
+      description: HTTP access
+    - from_port: 443
+      to_port: 443
+      protocol: tcp
+      cidr_blocks:
+      - 0.0.0.0/0
+      description: HTTPS access
