--- a/examples/demoday/rosa_and_hcp.yaml
+++ b/examples/demoday/rosa_and_hcp.yaml
@@ -1,53 +1,53 @@
 ---
 yamlforge:
   cloud_workspace:
-    name: "aws-openshift-simple"
-    description: "Deploy ROSA and ROSA HCP in the same deployment"
-  
-  aws:
-    use_data_sources: true
-
-  # Supporting AWS Infrastructure
+    name: aws-openshift-simple
+    description: Deploy ROSA and ROSA HCP in the same deployment
   instances:
-    - name: "openshift-jumphost"
-      provider: "aws"
-      size: "medium"
-      image: "RHEL-9-latest"
-      region: "us-east-1"
-      security_groups: ["ssh"]
-      user_data_script: |
-        #!/bin/bash
-        yum update -y
-        yum install -y curl wget git
-        # Install OpenShift CLI
-        curl -L https://mirror.openshift.com/pub/openshift-v4/clients/ocp/stable/openshift-client-linux.tar.gz | tar -xz -C /usr/local/bin/
-        chmod +x /usr/local/bin/oc
-        # Install ROSA CLI
-        curl -L https://mirror.openshift.com/pub/openshift-v4/clients/rosa/latest/rosa-linux.tar.gz | tar -xz -C /usr/local/bin/
-        chmod +x /usr/local/bin/rosa
+  - name: openshift-jumphost
+    provider: aws
+    size: medium
+    image: RHEL-9-latest
+    region: us-east-1
+    security_groups:
+    - ssh
+    user_data_script: '#!/bin/bash
 
-  # Security Groups
+      yum update -y
+
+      yum install -y curl wget git
+
+      # Install OpenShift CLI
+
+      curl -L https://mirror.openshift.com/pub/openshift-v4/clients/ocp/stable/openshift-client-linux.tar.gz
+      | tar -xz -C /usr/local/bin/
+
+      chmod +x /usr/local/bin/oc
+
+      # Install ROSA CLI
+
+      curl -L https://mirror.openshift.com/pub/openshift-v4/clients/rosa/latest/rosa-linux.tar.gz
+      | tar -xz -C /usr/local/bin/
+
+      chmod +x /usr/local/bin/rosa
+
+      '
   security_groups:
-    - name: "ssh"
-      description: "SSH access"
-      rules:
-        - direction: "ingress"
-          protocol: "tcp"
-          port_range: "22"
-          source: "0.0.0.0/0"
-
-  # OpenShift Clusters
+  - name: ssh
+    description: SSH access
+    rules:
+    - direction: ingress
+      protocol: tcp
+      port_range: '22'
+      source: 0.0.0.0/0
   openshift_clusters:
-    # Production ROSA HCP
-    - name: "my-rosa-hcp"
-      type: "rosa-hcp"
-      region: "us-east-1"
-      version: "latest"
-      size: "small"
-
-    # Development ROSA Classic
-    - name: "my-rosa-classic"
-      type: "rosa-classic"
-      region: "us-east-1"
-      version: "4.18.19"
-      size: "small"
+  - name: my-rosa-hcp
+    type: rosa-hcp
+    region: us-east-1
+    version: latest
+    size: small
+  - name: my-rosa-classic
+    type: rosa-classic
+    region: us-east-1
+    version: 4.18.19
+    size: small
