--- a/examples/extended-providers/multi_provider_new_example.yaml
+++ b/examples/extended-providers/multi_provider_new_example.yaml
@@ -1,148 +1,135 @@
 ---
-# Multi-Provider Example with New Providers
-# Demonstrates Oracle Cloud Infrastructure (OCI), VMware vSphere, and Alibaba Cloud
-# alongside existing AWS, Azure, and GCP providers
-
 yamlforge:
   cloud_workspace:
-    name: "new-providers-demo"
-    description: "Demonstration of OCI, VMware, and Alibaba Cloud providers"
+    name: new-providers-demo
+    description: Demonstration of OCI, VMware, and Alibaba Cloud providers
     tags:
-      guid: "new01"
-      project: "provider-expansion"
-
-  # Security groups for web and database access
+      guid: new01
+      project: provider-expansion
   security_groups:
     web-tier:
-      description: "Web tier access"
+      description: Web tier access
       rules:
-        - protocol: tcp
-          port: 80
-          source: "0.0.0.0/0"
-        - protocol: tcp
-          port: 443
-          source: "0.0.0.0/0"
-        - protocol: tcp
-          port: 22
-          source: "10.0.0.0/8"
-
+      - protocol: tcp
+        port: 80
+        source: 0.0.0.0/0
+      - protocol: tcp
+        port: 443
+        source: 0.0.0.0/0
+      - protocol: tcp
+        port: 22
+        source: 10.0.0.0/8
     database-tier:
-      description: "Database tier access"
+      description: Database tier access
       rules:
-        - protocol: tcp
-          port: 3306
-          source: "10.0.0.0/16"
-        - protocol: tcp
-          port: 5432
-          source: "10.0.0.0/16"
-        - protocol: tcp
-          port: 22
-          source: "10.0.0.0/8"
-
-  # SSH key configuration
-  ssh_keys:
-    default: "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC7... new-providers@company.com"
-
-  # Instances across all supported providers including new ones
+      - protocol: tcp
+        port: 3306
+        source: 10.0.0.0/16
+      - protocol: tcp
+        port: 5432
+        source: 10.0.0.0/16
+      - protocol: tcp
+        port: 22
+        source: 10.0.0.0/8
   instances:
-    # Traditional cloud providers
-    - name: "aws-web-server"
-      provider: "aws"
-      size: "medium"
-      image: "RHEL9-latest"
-      region: "us-east-1"
-      security_groups: ["web-tier"]
+  - name: aws-web-server
+    provider: aws
+    size: medium
+    image: RHEL9-latest
+    region: us-east-1
+    security_groups:
+    - web-tier
+  - name: azure-api-server
+    provider: azure
+    size: medium
+    image: RHEL9-latest
+    region: eastus
+    security_groups:
+    - web-tier
+  - name: gcp-analytics-server
+    provider: gcp
+    size: large
+    image: RHEL9-latest
+    region: us-central1
+    security_groups:
+    - database-tier
+  - name: oci-database-server
+    provider: oci
+    size: large
+    image: RHEL9-latest
+    region: us-ashburn-1
+    security_groups:
+    - database-tier
+    user_data_script: '#!/bin/bash
 
-    - name: "azure-api-server"
-      provider: "azure"
-      size: "medium"
-      image: "RHEL9-latest"
-      region: "eastus"
-      security_groups: ["web-tier"]
+      echo "OCI Database Server - $(date)" > /var/log/yamlforge-init.log
 
-    - name: "gcp-analytics-server"
-      provider: "gcp"
-      size: "large"
-      image: "RHEL9-latest"
-      region: "us-central1"
-      security_groups: ["database-tier"]
+      yum update -y
 
-    # NEW PROVIDERS
-    
-    # Oracle Cloud Infrastructure (OCI)
-    - name: "oci-database-server"
-      provider: "oci"
-      size: "large"
-      image: "RHEL9-latest"
-      region: "us-ashburn-1"
-      security_groups: ["database-tier"]
-      user_data_script: |
-        #!/bin/bash
-        echo "OCI Database Server - $(date)" > /var/log/yamlforge-init.log
-        yum update -y
-        yum install -y postgresql-server
+      yum install -y postgresql-server
 
-    - name: "oci-monitoring-server"
-      provider: "oci"
-      size: "medium"
-      image: "OracleLinux9-latest"
-      region: "us-phoenix-1"
-      security_groups: ["web-tier"]
+      '
+  - name: oci-monitoring-server
+    provider: oci
+    size: medium
+    image: OracleLinux9-latest
+    region: us-phoenix-1
+    security_groups:
+    - web-tier
+  - name: vmware-backup-server
+    provider: vmware
+    size: large
+    image: RHEL9-latest
+    datacenter: Datacenter
+    security_groups:
+    - database-tier
+    user_data_script: '#!/bin/bash
 
-    # VMware vSphere (on-premises)
-    - name: "vmware-backup-server"
-      provider: "vmware"
-      size: "large"
-      image: "RHEL9-latest"
-      # VMware uses datacenters instead of regions
-      datacenter: "Datacenter"
-      security_groups: ["database-tier"]
-      user_data_script: |
-        #!/bin/bash
-        echo "VMware Backup Server - $(date)" > /var/log/yamlforge-init.log
-        yum update -y
-        yum install -y rsync
+      echo "VMware Backup Server - $(date)" > /var/log/yamlforge-init.log
 
-    - name: "vmware-dev-workstation"
-      provider: "vmware"
-      size: "xlarge"
-      image: "Ubuntu22-latest"
-      datacenter: "Lab-Datacenter"
-      security_groups: ["web-tier"]
+      yum update -y
 
-    # Alibaba Cloud (for Asia-Pacific deployment)
-    - name: "alibaba-frontend-server"
-      provider: "alibaba"
-      size: "medium"
-      image: "RHEL9-latest"
-      region: "cn-hangzhou"
-      security_groups: ["web-tier"]
-      user_data_script: |
-        #!/bin/bash
-        echo "Alibaba Frontend Server - $(date)" > /var/log/yamlforge-init.log
-        yum update -y
-        yum install -y nginx
+      yum install -y rsync
 
-    - name: "alibaba-cache-server"
-      provider: "alibaba"
-      size: "small"
-      image: "AlibabaLinux3-latest"
-      region: "cn-shanghai"
-      security_groups: ["database-tier"]
+      '
+  - name: vmware-dev-workstation
+    provider: vmware
+    size: xlarge
+    image: Ubuntu22-latest
+    datacenter: Lab-Datacenter
+    security_groups:
+    - web-tier
+  - name: alibaba-frontend-server
+    provider: alibaba
+    size: medium
+    image: RHEL9-latest
+    region: cn-hangzhou
+    security_groups:
+    - web-tier
+    user_data_script: '#!/bin/bash
 
-    # Demonstrate cost optimization across all providers
-    - name: "cheapest-worker-global"
-      provider: "cheapest"
-      size: "small"
-      image: "RHEL9-latest"
-      # Will automatically select the cheapest option across ALL providers
-      # including the new OCI, VMware, and Alibaba options
-      location: "us-east-1_mapped"
+      echo "Alibaba Frontend Server - $(date)" > /var/log/yamlforge-init.log
 
-  # Global configuration
+      yum update -y
+
+      yum install -y nginx
+
+      '
+  - name: alibaba-cache-server
+    provider: alibaba
+    size: small
+    image: AlibabaLinux3-latest
+    region: cn-shanghai
+    security_groups:
+    - database-tier
+  - name: cheapest-worker-global
+    provider: cheapest
+    size: small
+    image: RHEL9-latest
+    location: us-east-1_mapped
   tags:
-    deployment_type: "multi_provider_expanded"
-    includes_new_providers: "true"
-    supported_providers: "aws,azure,gcp,oci,vmware,alibaba"
-    cost_optimization: "enabled"
-    environment: "demo" 
+    deployment_type: multi_provider_expanded
+    includes_new_providers: 'true'
+    supported_providers: aws,azure,gcp,oci,vmware,alibaba
+    cost_optimization: enabled
+    environment: demo
