--- a/examples/multi-cloud/rhel_gold_vs_public_test.yaml
+++ b/examples/multi-cloud/rhel_gold_vs_public_test.yaml
@@ -1,98 +1,83 @@
 ---
-# RHEL Gold vs Public Images Test
-# Compares RHEL Gold/BYOS images with public marketplace images
-
 yamlforge:
   cloud_workspace:
-    name: "rhel-licensing-comparison"
-    description: "RHEL licensing model comparison workspace"
+    name: rhel-licensing-comparison
+    description: RHEL licensing model comparison workspace
     tags:
-      guid: "rhl01"
-      test_purpose: "licensing_comparison"
-      cost_analysis: "gold_vs_public"
-      compliance: "red_hat_cloud_access"
-
+      guid: rhl01
+      test_purpose: licensing_comparison
+      cost_analysis: gold_vs_public
+      compliance: red_hat_cloud_access
   instances:
-    # RHEL Gold/BYOS images (Red Hat Cloud Access)
-    - name: "aws-rhel9-gold"
-      provider: "aws"
-      size: "medium"
-      image: "RHEL9-gold"
-      region: "us-east-1"
-      tags:
-        licensing: "byos"
-        image_type: "gold"
-        cost_model: "subscription"
-        
-    - name: "azure-rhel9-gold"
-      provider: "azure"
-      size: "medium"
-      image: "RHEL9-gold"
-      region: "eastus"
-      tags:
-        licensing: "byos"
-        image_type: "gold"
-        cost_model: "subscription"
-        
-    - name: "gcp-rhel9-gold"
-      provider: "gcp"
-      size: "medium"
-      image: "RHEL9-gold"
-      region: "us-central1"
-      tags:
-        licensing: "byos"
-        image_type: "gold"
-        cost_model: "subscription"
-
-    # Public marketplace RHEL images
-    - name: "aws-rhel9-public"
-      provider: "aws"
-      size: "medium"
-      image: "RHEL9-latest"
-      region: "us-east-1"
-      tags:
-        licensing: "marketplace"
-        image_type: "public"
-        cost_model: "hourly"
-        
-    - name: "azure-rhel9-public"
-      provider: "azure"
-      size: "medium"
-      image: "RHEL9-latest"
-      region: "eastus"
-      tags:
-        licensing: "marketplace"
-        image_type: "public"
-        cost_model: "hourly"
-        
-    - name: "gcp-rhel9-public"
-      provider: "gcp"
-      size: "medium"
-      image: "RHEL9-latest"
-      region: "us-central1"
-      tags:
-        licensing: "marketplace"
-        image_type: "public"
-        cost_model: "hourly"
-
-    # Cost comparison using cheapest provider
-    - name: "cheapest-rhel9-gold"
-      provider: "cheapest"
-      cores: 2
-      memory: 4096
-      image: "RHEL9-gold"
-      tags:
-        licensing: "byos"
-        cost_optimization: "enabled"
-        
-    - name: "cheapest-rhel9-public"
-      provider: "cheapest"
-      cores: 2
-      memory: 4096
-      image: "RHEL9-latest"
-      tags:
-        licensing: "marketplace"
-        cost_optimization: "enabled"
-
+  - name: aws-rhel9-gold
+    provider: aws
+    size: medium
+    image: RHEL9-gold
+    region: us-east-1
+    tags:
+      licensing: byos
+      image_type: gold
+      cost_model: subscription
+  - name: azure-rhel9-gold
+    provider: azure
+    size: medium
+    image: RHEL9-gold
+    region: eastus
+    tags:
+      licensing: byos
+      image_type: gold
+      cost_model: subscription
+  - name: gcp-rhel9-gold
+    provider: gcp
+    size: medium
+    image: RHEL9-gold
+    region: us-central1
+    tags:
+      licensing: byos
+      image_type: gold
+      cost_model: subscription
+  - name: aws-rhel9-public
+    provider: aws
+    size: medium
+    image: RHEL9-latest
+    region: us-east-1
+    tags:
+      licensing: marketplace
+      image_type: public
+      cost_model: hourly
+  - name: azure-rhel9-public
+    provider: azure
+    size: medium
+    image: RHEL9-latest
+    region: eastus
+    tags:
+      licensing: marketplace
+      image_type: public
+      cost_model: hourly
+  - name: gcp-rhel9-public
+    provider: gcp
+    size: medium
+    image: RHEL9-latest
+    region: us-central1
+    tags:
+      licensing: marketplace
+      image_type: public
+      cost_model: hourly
+  - name: cheapest-rhel9-gold
+    provider: cheapest
+    cores: 2
+    memory: 4096
+    image: RHEL9-gold
+    tags:
+      licensing: byos
+      cost_optimization: enabled
+  - name: cheapest-rhel9-public
+    provider: cheapest
+    cores: 2
+    memory: 4096
+    image: RHEL9-latest
+    tags:
+      licensing: marketplace
+      cost_optimization: enabled
   tags:
-    environment: "testing" 
+    environment: testing
